2008-10-27  Dan Winship  <danw@gnome.org>

	* libsoup/soup-cookie.c (soup_cookie_free): free the expires date,
	if set

	* libsoup/soup-auth-domain-basic.h:
	* libsoup/soup-auth-domain-digest.h:
	* libsoup/soup-auth-domain.h:
	* libsoup/soup-cookie-jar.h:
	* libsoup/soup-logger.h:
	* libsoup/soup-multipart.h: add G_BEGIN/END_DECLS

	* libsoup/soup-date.c: add some g_return_if_fails

	Patches from and inspired by Xan Lopez, #522125

2008-10-22  Dan Winship  <danw@gnome.org>

	* configure.in:
	* tests/Makefile.am: fix up some of the regression test
	configuration stuff, and print warnings when some tests aren't run
	do to missing dependencies

2008-10-20  Dan Winship  <danw@gnome.org>

	* tests/Makefile.am (INCLUDES): add SOUP_MAINTAINER_FLAGS here
	too.

	* tests/dns.c (main):
	* tests/getbug.c (main):
	* tests/server-auth-test.c (do_test): replace deprecated glib
	functions

2008-10-20  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.in:
	* libsoup/Makefile.am:
	* libsoup/soup-status.h:
	* libsoup/soup-types.h:
	* libsoup/soup-uri.c: (soup_uri_to_string):
	Build with G_DISABLE_DEPRECATED and G_DISABLE_SINGLE_INCLUDES; enforce
	the first switch under maintainer mode and the second one
	unconditionally (#557072).

2008-10-19  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth.c (soup_auth_update): compare scheme name
	case-insensitively, to prevent an infinite loop when it's not in
	standard form. #536285

2008-10-10  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-headers.c
	(soup_message_headers_get_ranges): if the caller passed the
	total_length of the message body, then sort sort the ranges and
	merge overlapping ones to generate a minimal set.

	* tests/range-test.c: test it

2008-10-09  Andrew W. Nosenko  <andrew.w.nosenko@gmail.com>

	* libsoup/soup-uri.c (soup_uri_to_string): Verify whether uri is
	non-NULL and avoid crash on NULL pointer dereference therefore.

2008-10-03  Dan Winship  <danw@gnome.org>
